# habit-tracker-django

./: .env  db.sqlite3  docker-compose.yml  main.py  pyproject.toml
config/: settings.py
habits/: admin.py  models.py
habits/migrations/: 0001_initial.py
